# SimpleHttpServer

./: .gitignore  CMakeLists.txt  README.md  main.py
include/: CMakeLists.txt
include/Argparser/: argparse.cpp  argparse.hpp
include/Client/: client.cpp  client.hpp  threadpool.cpp  threadpool.hpp
include/HTTPMessages/: httprequests.cpp  httprequests.hpp
include/Media_Class/: Files.cpp  Files.hpp
include/Responses/: responses.cpp  responses.hpp
include/Server/: server.cpp  server.hpp
simple_http_server/: CMakeLists.txt
simple_http_server/Client/: client.hpp  threadpool.cpp  threadpool.hpp
simple_http_server/Files/: files.cpp
simple_http_server/HTTPMessages/: httprequests.cpp  httprequests.hpp  httpresponses.cpp
simple_http_server/Responses/: responses.cpp  responses.hpp
simple_http_server/Server/: server.cpp
src/: CMakeLists.txt  main.cpp
templates/: hello.html  index.html
